# Lightweight-Cryptography-Implementation---Ascon-AEAD128

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: ARCHITECTURE.md  SECURITY_REVIEW.md  TASK_BOARD.md
examples/: demo_aead128.c
include/: ascon_aead128.h  ascon_api.h  ascon_bytes.h  ascon_permutation.h
src/: ascon_aead128.c  ascon_api.c  ascon_bytes.c  ascon_permutation.c
tests/: test_aead128.c  test_bytes_api.c  test_fuzz_harness.c  test_permutation.c  test_vectors.c
